Fix Java 17 code issues