@@ -36,7 +36,6 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
-import java.util.stream.Collectors;
 import lombok.AccessLevel;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
@@ -151,7 +150,7 @@ public final class StreamsCleanUpRunner implements CleanUpRunner {
                     }
                     return exists;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
