@@ -38,7 +38,6 @@ import java.nio.file.Path;
 import java.time.Duration;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.apache.kafka.common.config.TopicConfig;
 import org.apache.kafka.common.serialization.Serdes;
 import org.apache.kafka.common.serialization.StringDeserializer;
@@ -232,7 +231,7 @@ class MaterializedXTest {
             final List<String> stores = information.getStores();
             final List<StateStore> stateStores = stores.stream()
                     .map(testDriver::getKeyValueStore)
-                    .collect(Collectors.toList());
+                    .toList();
             this.softly.assertThat(stateStores)
                     .allSatisfy(stateStore -> this.softly.assertThat(stateStore.persistent()).isFalse());
         }
@@ -262,7 +261,7 @@ class MaterializedXTest {
             final List<String> stores = information.getStores();
             final List<StateStore> stateStores = stores.stream()
                     .map(testDriver::getKeyValueStore)
-                    .collect(Collectors.toList());
+                    .toList();
             this.softly.assertThat(stateStores)
                     .allSatisfy(stateStore -> this.softly.assertThat(stateStore.persistent()).isFalse());
         }
