@@ -37,7 +37,6 @@ import java.nio.file.Path;
 import java.time.Duration;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.apache.kafka.common.config.TopicConfig;
 import org.apache.kafka.common.serialization.Serdes;
 import org.apache.kafka.common.serialization.StringDeserializer;
@@ -387,7 +386,7 @@ class StreamJoinedXTest {
             final List<String> stores = information.getStores();
             final List<StateStore> stateStores = stores.stream()
                     .map(testDriver::getWindowStore)
-                    .collect(Collectors.toList());
+                    .toList();
             this.softly.assertThat(stateStores)
                     .allSatisfy(stateStore -> this.softly.assertThat(stateStore.persistent()).isFalse());
         }
@@ -422,7 +421,7 @@ class StreamJoinedXTest {
             final List<String> stores = information.getStores();
             final List<StateStore> stateStores = stores.stream()
                     .map(testDriver::getWindowStore)
-                    .collect(Collectors.toList());
+                    .toList();
             this.softly.assertThat(stateStores)
                     .allSatisfy(stateStore -> this.softly.assertThat(stateStore.persistent()).isFalse());
         }
